--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node bin/static.js",
-    "build": "node build/build.js",
+    "build": "GENERATE_SOURCEMAP=false node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@polkadot/ui-keyring": "^0.61.1",
+    "@vue-polkadot/vue-api": "^0.0.24",
     "@ledgerhq/hw-app-eth": "^5.43.0",
     "@ledgerhq/hw-transport-webusb": "^5.43.0",
     "@metamask/detect-provider": "^1.2.0",
-    "async": "^2.6.4",
+    "async": "^2.6.0",
     "bignumber.js": "^9.0.1",
     "bip39": "^2.4.0",
     "ethers": "^5.0.24",
@@ -26,7 +28,7 @@
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
     "vuex": "^3.6.0",
-    "yoethwallet": "^0.1.5",
+    "yoethwallet": "^0.1.4",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
@@ -57,7 +59,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.18.2",
+    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
@@ -82,7 +84,7 @@
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "shelljs": "^0.8.5",
+    "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
@@ -92,7 +94,7 @@
     "webpack": "^2.3.3",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.25.3",
+    "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
